--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -124,6 +123,12 @@
       <img src="Cake22.jpg" alt="Cake 22">
       <img src="Cake23.jpg" alt="Cake 23">
       <img src="Cake24.jpg" alt="Cake 24">
+      <img src="Cake25.jpg" alt="Cake 25">
+      <img src="Cake26.jpg" alt="Cake 26">
+      <img src="Cake27.jpg" alt="Cake 27">
+      <img src="Cake28.jpg" alt="Cake 28">
+      <img src="Cake29.jpg" alt="Cake 29">
+      <img src="Cake30.jpg" alt="Cake 30">
     </div>
 
     <h3>Cookies</h3>
@@ -131,6 +136,9 @@
       <img src="Cookies1.jpg" alt="Cookies 1">
       <img src="Cookies2.jpg" alt="Cookies 2">
       <img src="Cookies3.jpg" alt="Cookies 3">
+      <img src="Cookies4.jpg" alt="Cookies 4">
+      <img src="Cookies5.jpg" alt="Cookies 5">
+      <img src="Cookies6.jpg" alt="Cookies 6">
     </div>
 
     <h3>Cupcakes</h3>
@@ -138,17 +146,31 @@
       <img src="Cupcake1.jpg" alt="Cupcake 1">
       <img src="Cupcake2.jpg" alt="Cupcake 2">
       <img src="Cupcake3.jpg" alt="Cupcake 3">
+      <img src="Cupcake4.jpg" alt="Cupcake 4">
     </div>
 
     <h3>Cake & Cookies</h3>
     <div class="gallery-grid">
       <img src="Cake&Cookies1.jpg" alt="Cake and Cookies 1">
+      <img src="Cake&Cookies2.jpg" alt="Cake and Cookies 2">
     </div>
 
     <h3>Cake & Cupcakes</h3>
     <div class="gallery-grid">
       <img src="Cake&Cupcakes1.jpg" alt="Cake and Cupcakes 1">
       <img src="Cake&Cupcakes2.jpg" alt="Cake and Cupcakes 2">
+    </div>
+
+    <h3>Dessert Jars</h3>
+    <div class="gallery-grid">
+      <img src="DessertJars1.jpg" alt="Dessert Jars 1">
+      <img src="DessertJars2.jpg" alt="Dessert Jars 2">
+    </div>
+
+    <h3>Cake Pops</h3>
+    <div class="gallery-grid">
+      <img src="CakePops1.jpg" alt="Cake Pops 1">
+      <img src="CakePops2.jpg" alt="Cake Pops 2">
     </div>
   </section>
 
@@ -160,7 +182,6 @@
     <a class="contact-button" href="https://wa.me/27799750908">WhatsApp Us</a>
     <a class="contact-button" href="https://www.instagram.com/ohmynoshh">Instagram</a>
     <a class="contact-button" href="https://www.facebook.com/share/1Eq7thDPyU/">Facebook</a>
-    
   </section>
 
   <footer>
