--- a/index.html
+++ b/index.html
@@ -174,6 +174,18 @@
     </div>
   </section>
 
+  <section id="classes">
+  <h2>Kids' Baking Classes</h2>
+  <p>Oh My Nosh now offers fun and interactive baking classes for children! Whether it’s cupcakes, cookies, or cake kits, your little one can learn the basics of baking in a safe, exciting environment.</p>
+  <ul>
+    <li>💸 <strong>R100 per child, per lesson</strong></li>
+    <li>📝 <strong>R170 once-off sign-up fee per child</strong></li>
+    <li>📍 Based in the general surrounds of Silvamonte, Johannesburg</li>
+    <li>🚗 Additional travel costs may apply for locations further out</li>
+  </ul>
+  <p>To find out more or to book a class, get in touch with us!</p>
+</section>
+
   <section id="contact">
     <h2>Get in Touch</h2>
     <p>Email: <a href="mailto:rameysasha@gmail.com">rameysasha@gmail.com</a></p>
