--- a/index.html
+++ b/index.html
@@ -66,138 +66,27 @@
       padding: 1rem;
       background-color: #ffeef4;
     }
+
+    @media (max-width: 768px) {
+      header img {
+        max-width: 90%;
+      }
+      nav a {
+        display: block;
+        margin: 0.5rem 0;
+      }
+      .contact-button {
+        display: block;
+        width: 90%;
+        margin: 10px auto;
+        text-align: center;
+      }
+      section {
+        padding: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
-    <img src="logo.jpg" alt="Oh My Nosh Logo" />
-  </header>
-  <nav>
-    <a href="#about">About</a>
-    <a href="#services">Products</a>
-    <a href="#gallery">Gallery</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Oh My Nosh specializes in custom cake designs, delightful cupcakes, cookies, cake pops, and dessert jars for every sweet occasion—be it weddings, birthdays, gender reveals, or DIY fun at home. We bring captivating cakes and other sweet necessities to life with creativity and love!</p>
-  </section>
-
-  <section id="services">
-    <h2>Our Treats</h2>
-    <ul>
-      <li>Cakes (custom and celebration)</li>
-      <li>Cupcakes</li>
-      <li>Cookies (custom & DIY)</li>
-      <li>Cake Pops</li>
-      <li>Dessert Jars</li>
-      <li>DIY Kits: Cookies & Cakes</li>
-    </ul>
-  </section>
-
-  <section id="gallery">
-    <h2>Gallery</h2>
-
-    <h3>Cakes</h3>
-    <div class="gallery-grid">
-      <img src="Cake1.jpg" alt="Cake 1">
-      <img src="Cake2.jpg" alt="Cake 2">
-      <img src="Cake3.jpg" alt="Cake 3">
-      <img src="Cake4.jpg" alt="Cake 4">
-      <img src="Cake5.jpg" alt="Cake 5">
-      <img src="Cake6.jpg" alt="Cake 6">
-      <img src="Cake7.jpg" alt="Cake 7">
-      <img src="Cake8.jpg" alt="Cake 8">
-      <img src="Cake11.jpg" alt="Cake 11">
-      <img src="Cake12.jpg" alt="Cake 12">
-      <img src="Cake13.jpg" alt="Cake 13">
-      <img src="Cake14.jpg" alt="Cake 14">
-      <img src="Cake15.jpg" alt="Cake 15">
-      <img src="Cake16.jpg" alt="Cake 16">
-      <img src="Cake17.jpg" alt="Cake 17">
-      <img src="Cake18.jpg" alt="Cake 18">
-      <img src="Cake19.jpg" alt="Cake 19">
-      <img src="Cake20.jpg" alt="Cake 20">
-      <img src="Cake21.jpg" alt="Cake 21">
-      <img src="Cake22.jpg" alt="Cake 22">
-      <img src="Cake23.jpg" alt="Cake 23">
-      <img src="Cake24.jpg" alt="Cake 24">
-      <img src="Cake25.jpg" alt="Cake 25">
-      <img src="Cake26.jpg" alt="Cake 26">
-      <img src="Cake27.jpg" alt="Cake 27">
-      <img src="Cake28.jpg" alt="Cake 28">
-      <img src="Cake29.jpg" alt="Cake 29">
-      <img src="Cake30.jpg" alt="Cake 30">
-    </div>
-
-    <h3>Cookies</h3>
-    <div class="gallery-grid">
-      <img src="Cookies1.jpg" alt="Cookies 1">
-      <img src="Cookies2.jpg" alt="Cookies 2">
-      <img src="Cookies3.jpg" alt="Cookies 3">
-      <img src="Cookies4.jpg" alt="Cookies 4">
-      <img src="Cookies5.jpg" alt="Cookies 5">
-      <img src="Cookies6.jpg" alt="Cookies 6">
-    </div>
-
-    <h3>Cupcakes</h3>
-    <div class="gallery-grid">
-      <img src="Cupcake1.jpg" alt="Cupcake 1">
-      <img src="Cupcake2.jpg" alt="Cupcake 2">
-      <img src="Cupcake3.jpg" alt="Cupcake 3">
-      <img src="Cupcake4.jpg" alt="Cupcake 4">
-    </div>
-
-    <h3>Cake & Cookies</h3>
-    <div class="gallery-grid">
-      <img src="Cake&Cookies1.jpg" alt="Cake and Cookies 1">
-      <img src="Cake&Cookies2.jpg" alt="Cake and Cookies 2">
-    </div>
-
-    <h3>Cake & Cupcakes</h3>
-    <div class="gallery-grid">
-      <img src="Cake&Cupcakes1.jpg" alt="Cake and Cupcakes 1">
-      <img src="Cake&Cupcakes2.jpg" alt="Cake and Cupcakes 2">
-    </div>
-
-    <h3>Dessert Jars</h3>
-    <div class="gallery-grid">
-      <img src="DessertJars1.jpg" alt="Dessert Jars 1">
-      <img src="DessertJars2.jpg" alt="Dessert Jars 2">
-    </div>
-
-    <h3>Cake Pops</h3>
-    <div class="gallery-grid">
-      <img src="CakePops1.jpg" alt="Cake Pops 1">
-      <img src="CakePops2.jpg" alt="Cake Pops 2">
-    </div>
-  </section>
-
-  <section id="classes">
-  <h2>Kids' Baking Classes</h2>
-  <p>Oh My Nosh now offers fun and interactive baking classes for children! Whether it’s cupcakes, cookies, or cake kits, your little one can learn the basics of baking in a safe, exciting environment.</p>
-  <ul>
-    <li>💸 <strong>R100 per child, per lesson</strong></li>
-    <li>📝 <strong>R170 once-off sign-up fee per child</strong></li>
-    <li>📍 Based in the general surrounds of Silvamonte, Johannesburg</li>
-    <li>🚗 Additional travel costs may apply for locations further out</li>
-  </ul>
-  <p>To find out more or to book a class, get in touch with us!</p>
-</section>
-
-  <section id="contact">
-    <h2>Get in Touch</h2>
-    <p>Email: <a href="mailto:rameysasha@gmail.com">rameysasha@gmail.com</a></p>
-    <p>Phone: <a href="tel:+27799750908">(+27) 79 975 0908</a></p>
-    <p>Location: Silvamonte, Johannesburg, Gauteng</p>
-    <a class="contact-button" href="https://wa.me/27799750908">WhatsApp Us</a>
-    <a class="contact-button" href="https://www.instagram.com/ohmynoshh">Instagram</a>
-    <a class="contact-button" href="https://www.facebook.com/share/1Eq7thDPyU/">Facebook</a>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Oh My Nosh. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+    <img src="
