--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oh My Nosh</title>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B4PP7QY7N8"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-B4PP7QY7N8');
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-B4PP7QY7N8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-B4PP7QY7N8');
   </script>
   <style>
     body {
@@ -70,6 +68,12 @@
       border: none;
       border-radius: 5px;
       text-decoration: none;
+      cursor: pointer;
+    }
+    input, select {
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
     }
     footer {
       text-align: center;
@@ -131,7 +135,6 @@
 
     <h3>Cakes</h3>
     <div class="gallery-grid">
-      <!-- Cake 9 and 10 removed -->
       <img src="Cake1.jpg" alt="Cake 1">
       <img src="Cake2.jpg" alt="Cake 2">
       <img src="Cake3.jpg" alt="Cake 3">
@@ -176,59 +179,3 @@
     <div class="gallery-grid">
       <img src="Cupcake1.jpg" alt="Cupcake 1">
       <img src="Cupcake2.jpg" alt="Cupcake 2">
-      <img src="Cupcake3.jpg" alt="Cupcake 3">
-      <img src="Cupcake4.jpg" alt="Cupcake 4">
-    </div>
-
-    <h3>Cake & Cookies</h3>
-    <div class="gallery-grid">
-      <img src="Cake&Cookies1.jpg" alt="Cake and Cookies 1">
-      <img src="Cake&Cookies2.jpg" alt="Cake and Cookies 2">
-    </div>
-
-    <h3>Cake & Cupcakes</h3>
-    <div class="gallery-grid">
-      <img src="Cake&Cupcakes1.jpg" alt="Cake and Cupcakes 1">
-      <img src="Cake&Cupcakes2.jpg" alt="Cake and Cupcakes 2">
-    </div>
-
-    <h3>Dessert Jars</h3>
-    <div class="gallery-grid">
-      <img src="DessertJars1.jpg" alt="Dessert Jars 1">
-      <img src="DessertJars2.jpg" alt="Dessert Jars 2">
-    </div>
-
-    <h3>Cake Pops</h3>
-    <div class="gallery-grid">
-      <img src="CakePops1.jpg" alt="Cake Pops 1">
-      <img src="CakePops2.jpg" alt="Cake Pops 2">
-    </div>
-  </section>
-
-  <section id="classes">
-    <h2>Kids' Baking Classes</h2>
-    <p>Oh My Nosh now offers fun and interactive baking classes for children! Whether it’s cupcakes, cookies, or cake kits, your little one can learn the basics of baking in a safe, exciting environment.</p>
-    <ul>
-      <li>💸 <strong>R100 per child, per lesson</strong></li>
-      <li>📝 <strong>R170 once-off sign-up fee per child</strong></li>
-      <li>📍 Based in the general surrounds of Silvamonte, Johannesburg</li>
-      <li>🚗 Additional travel costs may apply for locations further out</li>
-    </ul>
-    <p>To find out more or to book a class, get in touch with us!</p>
-  </section>
-
-  <section id="contact">
-    <h2>Get in Touch</h2>
-    <p>Email: <a href="mailto:rameysasha@gmail.com">rameysasha@gmail.com</a></p>
-    <p>Phone: <a href="tel:+27799750908">(+27) 79 975 0908</a></p>
-    <p>Location: Silvamonte, Johannesburg, Gauteng</p>
-    <a class="contact-button" href="https://wa.me/27799750908">WhatsApp Us</a>
-    <a class="contact-button" href="https://www.instagram.com/ohmynoshh">Instagram</a>
-    <a class="contact-button" href="https://www.facebook.com/share/1Eq7thDPyU/">Facebook</a>
-  </section>
-
-  <footer>
-    <p>© 2025 Oh My Nosh. All rights reserved.</p>
-  </footer>
-</body>
-</html>
