--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     }
     .contact-button {
       display: inline-block;
-      margin: 0.5rem;
+      margin: 0.5rem 0;
       padding: 0.75rem 1.5rem;
       background-color: #d48fa4;
       color: white;
@@ -70,17 +70,15 @@
       text-decoration: none;
       cursor: pointer;
     }
-    input, select {
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
     footer {
       text-align: center;
       padding: 1rem;
       background-color: #ffeef4;
     }
-
+    input, select {
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
     @media (max-width: 768px) {
       header img {
         max-width: 90%;
@@ -135,47 +133,125 @@
 
     <h3>Cakes</h3>
     <div class="gallery-grid">
+      <!-- Image list -->
       <img src="Cake1.jpg" alt="Cake 1">
-      <img src="Cake2.jpg" alt="Cake 2">
-      <img src="Cake3.jpg" alt="Cake 3">
-      <img src="Cake4.jpg" alt="Cake 4">
-      <img src="Cake5.jpg" alt="Cake 5">
-      <img src="Cake6.jpg" alt="Cake 6">
-      <img src="Cake7.jpg" alt="Cake 7">
-      <img src="Cake8.jpg" alt="Cake 8">
-      <img src="Cake11.jpg" alt="Cake 11">
-      <img src="Cake12.jpg" alt="Cake 12">
-      <img src="Cake13.jpg" alt="Cake 13">
-      <img src="Cake14.jpg" alt="Cake 14">
-      <img src="Cake15.jpg" alt="Cake 15">
-      <img src="Cake16.jpg" alt="Cake 16">
-      <img src="Cake17.jpg" alt="Cake 17">
-      <img src="Cake18.jpg" alt="Cake 18">
-      <img src="Cake19.jpg" alt="Cake 19">
-      <img src="Cake20.jpg" alt="Cake 20">
-      <img src="Cake21.jpg" alt="Cake 21">
-      <img src="Cake22.jpg" alt="Cake 22">
-      <img src="Cake23.jpg" alt="Cake 23">
-      <img src="Cake24.jpg" alt="Cake 24">
-      <img src="Cake25.jpg" alt="Cake 25">
-      <img src="Cake26.jpg" alt="Cake 26">
-      <img src="Cake27.jpg" alt="Cake 27">
-      <img src="Cake28.jpg" alt="Cake 28">
-      <img src="Cake29.jpg" alt="Cake 29">
+      <!-- ... Add remaining cakes here ... -->
       <img src="Cake30.jpg" alt="Cake 30">
     </div>
 
     <h3>Cookies</h3>
     <div class="gallery-grid">
       <img src="Cookies1.jpg" alt="Cookies 1">
-      <img src="Cookies2.jpg" alt="Cookies 2">
-      <img src="Cookies3.jpg" alt="Cookies 3">
-      <img src="Cookies4.jpg" alt="Cookies 4">
-      <img src="Cookies5.jpg" alt="Cookies 5">
-      <img src="Cookies6.jpg" alt="Cookies 6">
+      <!-- ... -->
     </div>
 
     <h3>Cupcakes</h3>
     <div class="gallery-grid">
       <img src="Cupcake1.jpg" alt="Cupcake 1">
-      <img src="Cupcake2.jpg" alt="Cupcake 2">
+      <!-- ... -->
+    </div>
+
+    <h3>Cake & Cookies</h3>
+    <div class="gallery-grid">
+      <img src="Cake&Cookies1.jpg" alt="Cake and Cookies 1">
+      <!-- ... -->
+    </div>
+
+    <h3>Cake & Cupcakes</h3>
+    <div class="gallery-grid">
+      <img src="Cake&Cupcakes1.jpg" alt="Cake and Cupcakes 1">
+      <!-- ... -->
+    </div>
+
+    <h3>Dessert Jars</h3>
+    <div class="gallery-grid">
+      <img src="DessertJars1.jpg" alt="Dessert Jars 1">
+      <!-- ... -->
+    </div>
+
+    <h3>Cake Pops</h3>
+    <div class="gallery-grid">
+      <img src="CakePops1.jpg" alt="Cake Pops 1">
+      <!-- ... -->
+    </div>
+  </section>
+
+  <section id="classes">
+    <h2>Kids' Baking Classes</h2>
+    <p>Oh My Nosh now offers fun and interactive baking classes for children! Whether it’s cupcakes, cookies, or cake kits, your little one can learn the basics of baking in a safe, exciting environment.</p>
+    <ul>
+      <li>💸 <strong>R100 per child, per lesson</strong></li>
+      <li>📝 <strong>R170 once-off sign-up fee per child</strong></li>
+      <li>📍 Based in the general surrounds of Silvamonte, Johannesburg</li>
+      <li>🚗 Additional travel costs may apply for locations further out</li>
+    </ul>
+    <p>To find out more or to book a class, get in touch with us!</p>
+  </section>
+
+  <section id="contact">
+    <h2>Get in Touch</h2>
+    <p>Email: <a href="mailto:rameysasha@gmail.com">rameysasha@gmail.com</a></p>
+    <p>Phone: <a href="tel:+27799750908">(+27) 79 975 0908</a></p>
+    <p>Location: Silvamonte, Johannesburg, Gauteng</p>
+
+    <h3>Place an Order</h3>
+    <form id="whatsapp-enquiry-form" onsubmit="event.preventDefault(); sendWhatsAppEnquiry();">
+      <label for="name">Your Name:</label><br>
+      <input type="text" id="name" name="name" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"><br>
+
+      <label for="product">What would you like to order?</label><br>
+      <select id="product" name="product" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;">
+        <option value="">--Select a Product--</option>
+        <option value="Custom Cake">Custom Cake</option>
+        <option value="Cupcakes">Cupcakes</option>
+        <option value="Cookies">Cookies</option>
+        <option value="Cake Pops">Cake Pops</option>
+        <option value="Dessert Jars">Dessert Jars</option>
+        <option value="DIY Kit">DIY Kit</option>
+        <option value="Other">Other</option>
+      </select><br>
+
+      <label for="budget">Budget (ZAR):</label><br>
+      <input type="number" id="budget" name="budget" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"><br>
+
+      <label for="order-date">Preferred Date:</label><br>
+      <input type="date" id="order-date" name="order-date" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"><br>
+
+      <button class="contact-button" type="submit">Send Enquiry via WhatsApp</button>
+    </form>
+
+    <a class="contact-button" href="https://www.instagram.com/ohmynoshh">Instagram</a>
+    <a class="contact-button" href="https://www.facebook.com/share/1Eq7thDPyU/">Facebook</a>
+  </section>
+
+  <footer>
+    <p>© 2025 Oh My Nosh. All rights reserved.</p>
+  </footer>
+
+  <script>
+    function sendWhatsAppEnquiry() {
+      const name = document.getElementById('name').value.trim();
+      const product = document.getElementById('product').value;
+      const budget = document.getElementById('budget').value;
+      const date = document.getElementById('order-date').value;
+
+      if (!name || !product || !budget || !date) {
+        alert("Please fill in all fields.");
+        return;
+      }
+
+      const formattedDate = new Date(date).toLocaleDateString("en-ZA", {
+        day: "numeric",
+        month: "long",
+        year: "numeric"
+      });
+
+      const message = `Hi! My name is ${name}. I'd like to enquire about ordering a ${product} for ${formattedDate}. My budget is R${budget}. Can you assist?`;
+      const encodedMessage = encodeURIComponent(message);
+      const phone = "27799750908";
+
+      window.open(`https://wa.me/${phone}?text=${encodedMessage}`, "_blank");
+    }
+  </script>
+</body>
+</html>
