--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oh My Nosh</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <style>
     :root {
       --bg-color: #fff8f9;
@@ -17,7 +20,7 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       background-color: var(--bg-color);
       color: var(--text-color);
       transition: background 0.3s, color 0.3s;
@@ -41,7 +44,8 @@
       max-width: 300px;
     }
 
-    nav, .bottom-nav {
+    nav,
+    .bottom-nav {
       background-color: #ffeef4;
       text-align: center;
       padding: 1rem;
@@ -53,7 +57,8 @@
       z-index: 999;
     }
 
-    nav a, .bottom-nav a {
+    nav a,
+    .bottom-nav a {
       margin: 0 1rem;
       text-decoration: none;
       color: var(--primary);
@@ -70,7 +75,7 @@
     }
 
     .hero {
-      background: url('hero-banner.webp') center/cover no-repeat;
+      background: url("hero-banner.jpg") center/cover no-repeat;
       color: white;
       padding: 4rem 1rem;
       text-align: center;
@@ -158,7 +163,7 @@
   <button class="dark-toggle" onclick="toggleDarkMode()">🌙 Dark Mode</button>
 
   <header>
-    <img src="logo.webp" alt="Oh My Nosh Logo">
+    <img src="logo.jpg" alt="Oh My Nosh Logo" />
   </header>
 
   <nav>
@@ -176,7 +181,10 @@
 
   <section id="about">
     <h2>About Us</h2>
-    <p>Custom cake designs, cupcakes, cookies, cake pops, dessert jars—creativity and love in every bite!</p>
+    <p>
+      Custom cake designs, cupcakes, cookies, cake pops, dessert jars—
+      creativity and love in every bite!
+    </p>
   </section>
 
   <section id="services">
@@ -194,15 +202,30 @@
   <section id="gallery">
     <h2>Gallery</h2>
     <div class="gallery-grid">
-      <img src="Cake1.webp" alt="Cake 1" onclick="openLightbox(this.src)">
-      <img src="Cookies1.webp" alt="Cookies 1" onclick="openLightbox(this.src)">
-      <img src="Cupcake1.webp" alt="Cupcake 1" onclick="openLightbox(this.src)">
+      <img
+        src="Cake1.jpg"
+        alt="Cake 1"
+        onclick="openLightbox(this.src)"
+      />
+      <img
+        src="Cookies1.jpg"
+        alt="Cookies 1"
+        onclick="openLightbox(this.src)"
+      />
+      <img
+        src="Cupcake1.jpg"
+        alt="Cupcake 1"
+        onclick="openLightbox(this.src)"
+      />
     </div>
   </section>
 
   <section id="classes">
     <h2>Baking Classes</h2>
-    <p>Fun, interactive sessions teaching kids how to bake treats in a safe, exciting environment.</p>
+    <p>
+      Fun, interactive sessions teaching kids how to bake treats in a safe,
+      exciting environment.
+    </p>
   </section>
 
   <section id="contact">
@@ -225,31 +248,50 @@
 
   <div class="back-to-top" onclick="scrollToTop()">⬆️</div>
 
-  <div id="lightbox" style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:#000a;justify-content:center;align-items:center;z-index:9999;">
-    <img id="lightbox-img" src="" style="max-width:90%;max-height:90%;">
+  <div
+    id="lightbox"
+    style="
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #000a;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    "
+  >
+    <img
+      id="lightbox-img"
+      src=""
+      style="max-width: 90%; max-height: 90%"
+    />
   </div>
 
   <script>
     function scrollToTop() {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
+      window.scrollTo({ top: 0, behavior: "smooth" });
     }
 
     window.onscroll = function () {
-      document.querySelector('.back-to-top').style.display = window.scrollY > 300 ? 'block' : 'none';
-    }
+      document.querySelector(".back-to-top").style.display =
+        window.scrollY > 300 ? "block" : "none";
+    };
 
     function toggleDarkMode() {
-      document.body.classList.toggle('dark-mode');
+      document.body.classList.toggle("dark-mode");
     }
 
     function openLightbox(src) {
-      document.getElementById('lightbox-img').src = src;
-      document.getElementById('lightbox').style.display = 'flex';
+      document.getElementById("lightbox-img").src = src;
+      document.getElementById("lightbox").style.display = "flex";
     }
 
-    document.getElementById('lightbox').onclick = function () {
-      this.style.display = 'none';
-    }
+    document.getElementById("lightbox").onclick = function () {
+      this.style.display = "none";
+    };
   </script>
 </body>
 </html>
